--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
   pre:
     # build docker image
     - docker info
-    - docker build -t stsilabs/openfda-web:eval .:
+    - docker build -t stsilabs/fda-sandbox-web:eval .:
         timeout: 1800
     # install aws command line tools for elasticbean stalk deployment
     - pip install awscli
@@ -17,7 +17,7 @@ dependencies:
 
   post:
     # load .env from s3
-    - aws s3 cp s3://open-fda/.env .env
+    #- aws s3 cp s3://open-fda/.env .env
     - bundle exec rake bower:install
 
 test:
@@ -26,10 +26,10 @@ test:
    - bundle exec rake teaspoon
    - cd gruve && python setup.py test
 
-deployment:
-  elasticbeanstalk:
-    branch: master
-    commands:
-    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
-    - bash docker_deploy.sh:
-        timeout: 1800
+#deployment:
+#  elasticbeanstalk:
+#    branch: master
+#    commands:
+#    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
+#    - bash docker_deploy.sh:
+#        timeout: 1800
