--- a/circle.yml
+++ b/circle.yml
@@ -26,10 +26,14 @@ test:
    - bundle exec rake teaspoon
    - cd gruve && python setup.py test
 
-#deployment:
+deployment:
+  docker:
+    branch: master
+    commands:
+    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - bash docker_deploy.sh:
 #  elasticbeanstalk:
 #    branch: master
 #    commands:
-#    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
-#    - bash docker_deploy.sh:
+#    - bash aws_deploy.sh:
 #        timeout: 1800
