--- a/circle.yml
+++ b/circle.yml
@@ -27,13 +27,9 @@ test:
    - cd gruve && python setup.py test
 
 deployment:
-  docker:
+  elasticbeanstalk:
     branch: master
     commands:
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - bash docker_deploy.sh:
-#  elasticbeanstalk:
-#    branch: master
-#    commands:
-#    - bash aws_deploy.sh:
-#        timeout: 1800
+        timeout: 1800
