--- a/circle.yml
+++ b/circle.yml
@@ -30,6 +30,6 @@ deployment:
   elasticbeanstalk:
     branch: master
     commands:
-    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
     - bash docker_deploy.sh:
         timeout: 1800
