--- a/circle.yml
+++ b/circle.yml
@@ -31,5 +31,5 @@ deployment:
     branch: master
     commands:
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
-    - bash docker_deploy.sh:
+    - bash docker_deploy.sh $CIRCLE_BUILD_NUM fda-sandbox-web:
         timeout: 1800
