--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -16,7 +16,7 @@ common: &default_settings
 
   # Your application name. Renaming here affects where data displays in New
   # Relic.  For more details, see https://docs.newrelic.com/docs/apm/new-relic-apm/maintenance/renaming-applications
-  app_name: OpenFDA
+  app_name: OpenFDASandbox
 
   # To disable the agent regardless of other settings, uncomment the following:
   # agent_enabled: false
@@ -30,7 +30,7 @@ common: &default_settings
 # If your application has other named environments, configure them here.
 development:
   <<: *default_settings
-  app_name: OpenFDA (Development)
+  app_name: OpenFDASandbox (Development)
 
   # NOTE: There is substantial overhead when running in developer mode.
   # Do not use for production or load testing.
@@ -38,7 +38,7 @@ development:
 
 demo:
   <<: *default_settings
-  app_name: OpenFDA (Development)
+  app_name: OpenFDASandbox (Development)
 
   # NOTE: There is substantial overhead when running in developer mode.
   # Do not use for production or load testing.
@@ -51,7 +51,7 @@ test:
 
 staging:
   <<: *default_settings
-  app_name: OpenFDA (Staging)
+  app_name: OpenFDASandbox (Staging)
 
 production:
   <<: *default_settings
