--- a/deploy/beanstalk/Dockerrun.aws.json.template
+++ b/deploy/beanstalk/Dockerrun.aws.json.template
@@ -37,7 +37,7 @@
       ]
     },
     {
-      "name": "DOCKER_PROJECT>",
+      "name": "<DOCKER_PROJECT>",
       "image": "<ORG>/<DOCKER_PROJECT>:<TAG>",
       "environment": [
         {
