--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 checkout:
   post:
     # preserve original version for deployment
-    cp -r *. /circle_deploy
+    - cp -r *. /circle_deploy
 machine:
   python:
     version: 3.4.2
