--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,3 @@
-checkout:
-  post:
-    # preserve original version for deployment
-    - mkdir circle_deploy
-    - cp -r * circle_deploy
 machine:
   python:
     version: 3.4.2
@@ -12,7 +7,11 @@ machine:
     DOCKER_PROJECT: fda-sandbox-web
     ORG: stsilabs
     EB_ENV: fda-sandbox
-
+    DEPLOY_HOME: $HOME/circle_deploy
+  post:
+    # preserve original version for deployment
+    - mkdir $DEPLOY_HOME
+    - cp -r * $DEPLOY_HOME
 dependencies:
   pre:
     # python setup
@@ -37,7 +36,7 @@ deployment:
     - docker info
     - docker build -t $ORG/$DOCKER_PROJECT:$CIRCLE_BUILD_NUM .:
         timeout: 1800
-        pwd: circle_deploy
+        pwd: $DEPLOY_HOME
     # push docker image
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
     - docker push $ORG/$DOCKER_PROJECT:$BUILD_TAG
