--- a/circle.yml
+++ b/circle.yml
@@ -32,6 +32,9 @@ deployment:
   demo:
     branch: demo4
     commands:
+    # revert any changes circleci may have made during dependency installs and testing
+    - git clean -df
+    - git checkout -- .
     # push docker image
     - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
     - docker push $ORG/$DOCKER_PROJECT:$BUILD_TAG
