--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "18F Prototype Challenge",
   "main": "index.js",
   "dependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "phantomjs": "^1.9.18"
   },
   "devDependencies": {},
   "scripts": {
