Fixing production SSL Certs issue

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 OPENFDA_API_KEY=yourKeyGoesHere
 OPENFDA_DATABASE_PASSWORD=passwordGoesHere
 NEW_RELIC_KEY=yourKeyGoesHere
+POSTGRES_PASSWORD=passwordGoesHere
+POSTGRES_USER=openfda
